Smi section Small fixes for calculator, getcredits

--- a/src/includes/calculator/calculator.scss
+++ b/src/includes/calculator/calculator.scss
@@ -2,13 +2,14 @@
 
 .calculator-wrapper {
     width: 80%;
-    height: 500px;
     margin: -150px 10%;
     padding: 30px 10%;
     background-color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 10;
+    position: relative;
 
     &__h2 {
         color: $black;
